# opengl-sandbox

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
src/: CMakeLists.txt  Manager.cpp  Manager.h  Node.cpp  Node.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  common.h  main.cpp  shader_sources.h
tests/: CMakeLists.txt  main.cpp  rendering.cpp
